# cobra_to_toml

./: README.rst  pyproject.toml
.github/workflows/: ci.yml
cobra_to_toml/: __init__.py  convert.py  proteomics.py  stoichiometry.py
tests/: conftest.py  test_cobra_to_toml.py  test_convert.py  test_proteomics.py  test_stoichiometry.py
tests/data/: proteomics_dummy.tsv
